--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
-# Node modules
-node_modules/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
 
 # Logs
 logs
@@ -11,6 +16,21 @@ yarn-error.log*
 # OS generated files
 .DS_Store
 Thumbs.db
+
+
+
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 
 # Build directories
 build/
